QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

CVS HEAD

- The most recently used patchbay definitions can now be correctly
  selected in round-robin fashion from its drop-down list widget.

- Avoid mixing JACK MIDI ports with regular audio ports on the
  Connections and Patchbay widgets; strictly list only audio ports.

- Added 192k sample rate to setup settings drop down list (as kindly
  reminded by Klaus Zimmermann, thanks).

- Most top-level widgets were missing the normal-widget flag, which
  were causing some sticky size behavior on some window managers.


0.2.21   2006-10-07  Shrinking on screen real-estate.

- GPL address update.

- All window captions can now be set smaller as tool-widgets. This
  option takes effect when child windows are kept always on top.

- For the brave of heart, specially the ones brave enough to try with
  Stephane Letz's jackdmp, a win32 build should be now possible.

- The main window button text labels are now optional (after a kind
  suggestion by Geoff Beasley, thanks).

- Increse default maximum number of ports setting from 128 to 256.

- Initial freebob backend driver support. Also changed the coreaudio
  backend driver command line device name/id parameter (EXPERIMENTAL).

- Closing the main window while not as an active JACK client, nor under
  a server running state, will just quit the whole application, even
  though the system-tray icon option is in effect.

- The most relevant transport commands (Rewind, Play and Pause) are now
  made available on the main window context popup menu.

- The post-shutdown script is now also being called when using the Stop
  button, whether the jackd server has been started internally or not.
  The initial hard-coded default is now on and set to `killall jackd`
  (as a workaround to an old request from Stephane Letz).

- The main window buttons display are now optional. One can choose