@@ -2,7 +2,7 @@
 <class>qjackctlMainForm</class>
 <comment>JACK Audio Connection Kit - Qt GUI Interface.
 
-   Copyright (C) 2003-2006, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2003-2007, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -542,7 +542,7 @@
                 </widget>
                 <widget class="QLabel" row="0" column="3" rowspan="1" colspan="2">
                     <property name="name">
-                        <cstring>CpuLoadTextLabel</cstring>
+                        <cstring>DspLoadTextLabel</cstring>
                     </property>
                     <property name="minimumSize">
                         <size>
@@ -561,7 +561,7 @@
                         <set>AlignCenter</set>
                     </property>
                     <property name="toolTip" stdset="0">
-                        <string>CPU Load</string>
+                        <string>DSP Load</string>
                     </property>
                 </widget>
                 <widget class="QLabel" row="0" column="5">
@@ -608,7 +608,7 @@
                         <number>2</number>
                     </property>
                     <property name="toolTip" stdset="0">
-                        <string>XRUN Count</string>
+                        <string>XRUN Count (notifications)</string>
                     </property>
                 </widget>
                 <widget class="QLabel" row="1" column="1" rowspan="1" colspan="5">
